# uptime-monitor

./: .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  pytest-ci.yml
apps/monitoring/: admin.py  apps.py  models.py  serializers.py  statistics.py  tasks.py  tests.py  utils.py  views.py
apps/monitoring/migrations/: 0001_initial.py  0002_initial.py
apps/notification/: admin.py  models.py  serializers.py  views.py
apps/notification/migrations/: 0001_initial.py  0002_initial.py  0003_remove_notificationlog_channel.py  0004_notificationchannel_type.py
apps/notification/notify_services/: bark.py  telegram.py
apps/service/: apps.py  models.py  serializers.py  tests.py  views.py
apps/service/migrations/: 0001_initial.py  0002_service_monitoring_type.py  0002_service_periodic_task.py  0003_service_periodic_task.py  0004_remove_service_periodic_task_service_peiodic_task.py  0005_rename_peiodic_task_service_periodic_task.py
docker/: supervisord.conf
docs/readme-img/: design.excalidraw
test/: ping_server.go  test_monitering.py  test_notification.py  test_service.py  test_tasks.py
uptimemonitor/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
